# sudo_pair

./: .dockerignore  .gitignore  .rustfmt.toml  .travis.yml  BUG-BOUNTY.md  Cargo.toml  Dockerfile  README.md  rustfmt.toml  sha4#
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  rust.yml
contrib/: make_deb_pkg.sh  sudo-pair.spec  sudo_pair.spec
contrib/DEBIAN/: conffiles  control  postinst
examples/deny_everything-raw/: Cargo.toml
examples/deny_everything-raw/src/: lib.rs
examples/raw_plugin_api/: Cargo.toml
examples/raw_plugin_api/src/: lib.rs
sample/: Makefile
sample/etc/: sudo.conf  sudo.prompt.pair  sudo_pair.prompt.pair
sample/etc/sudoers.d/: sudo_pair
src/: lib.rs  result.rs  session.rs  socket.rs  sudo.rs
src/sudo/: mod.rs  sudo_plugin.rs
src/sudo_plugin/: ffi.rs  mod.rs  plugin.rs  result.rs  version.rs
sudo_pair/: CHANGELOG.md  Cargo.toml  README.md
sudo_pair/src/: errors.rs  lib.rs  prompt.rs  session.rs  socket.rs  template.rs
sudo_plugin/: CHANGELOG.md  Cargo.toml
sudo_plugin-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
sudo_plugin-sys/include/: bindings.h  sudo_plugin.h
sudo_plugin-sys/src/: bindings.rs  lib.rs
sudo_plugin-sys/src/bindings/: sudo_plugin-1.12.aarch64.rs  sudo_plugin-1.12.x86-64.rs  sudo_plugin-1.12.x86.rs  sudo_plugin-1.14.aarch64.rs  sudo_plugin-1.14.x86.rs  sudo_plugin-1.9.x86-64.rs  sudo_plugin-1.9.x86.rs  sudo_plugin.aarch64.rs  sudo_plugin.x86-64.rs  sudo_plugin.x86.rs
sudo_plugin/examples/: conversation.rs
sudo_plugin/src/: core.rs  errors.rs  ffi.rs  lib.rs  macros.rs  options.rs  output.rs  plugin.rs  prelude.rs  result.rs  version.rs
sudo_plugin/src/options/: command_info.rs  option_map.rs  settings.rs  traits.rs  user_info.rs
sudo_plugin/src/output/: conv_facility.rs  print_facility.rs  tty.rs
sudo_plugin/src/plugin/: command_info.rs  conv_facility.rs  conv_prompt.rs  io_env.rs  io_plugin.rs  io_state.rs  mod.rs  option_map.rs  parsing.rs  print_facility.rs  settings.rs  traits.rs  user_info.rs
