[package]
name    = "sudo_pair"
version = "0.9.2"
license = "Apache-2.0"

authors     = ["Stephen Touset <stephen@squareup.com>"]
description = "sudo IO-plugin to require a live human pair"

homepage   = "https://github.com/square/sudo_pair"
repository = "https://github.com/square/sudo_pair.git"
readme     = "../README.md"

categories = [ "command-line-utilities" ]
keywords   = [ "sudo", "sudo-plugin", "dual-control", "sox" ]

[lib]
name       = "sudo_pair"
crate-type = ["cdylib"]

[dependencies]
libc        = '0'
error-chain = '0'
sudo_plugin = { version = "1.1", path = "../sudo_plugin" }

[badges]
travis-ci = { repository = "square/sudo_pair" }
