[package]
name    = 'sudo_pair'
version = '1.0.0'
license = 'Apache-2.0'
edition = '2018'

authors     = ['Stephen Touset <stephen@squareup.com>']
description = 'sudo IO-plugin to require a live human pair'

homepage   = 'https://github.com/square/sudo_pair'
repository = 'https://github.com/square/sudo_pair.git'
readme     = '../README.md'

categories = [ 'command-line-utilities' ]
keywords   = [ 'sudo', 'sudo-plugin', 'dual-control', 'sox' ]

[lib]
name       = 'sudo_pair'
crate-type = ['cdylib']

[features]
default        = ['syslog', 'change_winsize']
change_winsize = []
journald       = ['slog-journald']
syslog         = ['slog-syslog']

[dependencies]
libc        = '0.2.70'
failure     = '0.1.8'
slog        = '2.5'
sudo_plugin = { version = '1.2', path = '../sudo_plugin' }

slog-journald = { version = '2.1',  optional = true }
slog-syslog   = { version = '0.13.0', optional = true }
