[package]
name    = 'sudo_plugin-sys'
version = '1.2.1'
license = 'Apache-2.0'
edition = '2018'

authors     = ['Stephen Touset <stephen@squareup.com>']
description = 'Bindings to the sudo plugin API'

homepage   = 'https://github.com/square/sudo_pair'
repository = 'https://github.com/square/sudo_pair.git'
readme     = 'README.md'

categories = [ 'external-ffi-bindings' ]
keywords   = [ 'sudo', 'sudo-plugin', 'api-bindings' ]

build = 'build.rs'

[features]
default              = ['min_sudo_plugin_1_9']
change_winsize       = ['min_sudo_plugin_1_12']
min_sudo_plugin_1_9  = []
min_sudo_plugin_1_12 = []
generate_bindings    = ['bindgen']

[build-dependencies]
bindgen = { version = '0.54.0', optional = true }

[badges]
travis-ci = { repository = 'square/sudo_pair' }
