[package]
name    = 'sudo_plugin-sys'
version = '1.2.1'
license = 'Apache-2.0'
edition = '2018'

authors     = ['Stephen Touset <stephen@squareup.com>']
description = 'Bindings to the sudo plugin API'

homepage   = 'https://github.com/square/sudo_pair'
repository = 'https://github.com/square/sudo_pair.git'
readme     = 'README.md'

categories = ['external-ffi-bindings']
keywords   = ['sudo', 'sudo-plugin', 'api-bindings']

build = 'build.rs'

[build-dependencies]
bindgen = { version = '0.64.0', optional = true }
