[package]
name    = "sudo_plugin"
version = "1.1.0"
license = "Apache-2.0"

authors     = ["Stephen Touset <stephen@squareup.com>"]
description = "Macros to easily write custom sudo plugins"

homepage   = "https://github.com/square/sudo_pair"
repository = "https://github.com/square/sudo_pair.git"
readme     = "../README.md"

categories = [ "external-ffi-bindings" ]
keywords   = [ "sudo", "sudo-plugin" ]

[dependencies]
libc            = '0'
error-chain     = '0'
sudo_plugin-sys = { version = "1", path = "../sudo_plugin-sys" }

[badges]
travis-ci = { repository = "square/sudo_pair" }
