[package]
name    = 'sudo_plugin'
version = '1.2.0'
license = 'Apache-2.0'
edition = '2018'

authors     = ['Stephen Touset <stephen@squareup.com>']
description = 'Macros to easily write custom sudo plugins'

homepage   = 'https://github.com/square/sudo_pair'
repository = 'https://github.com/square/sudo_pair.git'
readme     = '../README.md'

categories = [ 'external-ffi-bindings' ]
keywords   = [ 'sudo', 'sudo-plugin' ]

[features]
default        = ['change_winsize']
change_winsize = ['sudo_plugin-sys/change_winsize']

[dependencies]
libc      = '0.2.70'
thiserror = '1.0'

[dependencies.sudo_plugin-sys]
version = '1.2'
path    = '../sudo_plugin-sys'
